# utilities

./: .gitignore  README.md
AnalyseCppHeader/: CMakeLists.txt  README.md  WriteToEmbind.cc  WriteToEmbind.h  analyse.cc  analyse.h  main.cc  main.h  setting.h
Webassembly/: .gitignore  CMakeLists.txt  README.md
Webassembly/src/: CMakeLists.txt  CMakeLists2.txt
Webassembly/src/geometry/: Point.h
Webassembly/src/wasm/: CppCallJs.h  EmscriptenBinding.cc  EmscriptenBinding.h  EmscriptenBinding2.cc  EmscriptenBinding2.h  JsCallCpp.cc  WasmConst.h
Webassembly/unittest/: CMakeLists.txt
